--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <title>Chain Link</title>
+        <link rel="stylesheet" type="text/css" href="css/bundle.css"/>
     </head>
     <body>
+        <div id="app"></div>
+        <script src="js/bundle.js"></script>
     </body>
 </html>
